<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/add_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/add_text_label" />

    <Button
        android:id="@+id/display_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/add_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/display_text_label" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/display_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/edit_text_label" />

    <Button
        android:id="@+id/language_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/edit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/language_label" />

    <Button
        android:id="@+id/translator_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/language_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/translator_label" />

    <Button
        android:id="@+id/translate_save_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/translator_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/translate_all" />
</RelativeLayout>